Add Russian language to Lesson 20

--- a/Lesson20.IntroToModel/src/main/webapp/WEB-INF/views/first/calculator.html
+++ b/Lesson20.IntroToModel/src/main/webapp/WEB-INF/views/first/calculator.html
@@ -5,6 +5,6 @@
     <title>Calculator</title>
 </head>
 <body>
-The result is: <p th:text="${result}"/>
+Результат: <p th:text="${result}"/>
 </body>
 </html>
