еÑtherst commit in this course

--- a/Lesson17.SpringControllersIntro/src/main/webapp/WEB-INF/views/first/goodbye.html
+++ b/Lesson17.SpringControllersIntro/src/main/webapp/WEB-INF/views/first/goodbye.html
@@ -8,5 +8,6 @@
 Goodbye!
 
 <a href="/first/hello">Say hello</a> or <a href="/exit">Exit</a>
+or <a href ="/first/hello?name=Pidor&surname=Chertov">Request with anower parameters!!OMG</a>
 </body>
 </html>
